fix background, add some letter-spacing

--- a/src/App.css
+++ b/src/App.css
@@ -18,5 +18,6 @@
   background-size: cover;
   inset: 0;
   opacity: 0.1;
+  top: -24px;
   z-index: -1;
 }
