--- a/src/Docs.css
+++ b/src/Docs.css
@@ -6,6 +6,7 @@
 
 .docs h2 {
   font-family: "Pirata One", sans-serif;
+  letter-spacing: 1px;
 }
 
 .label {
